podcast.json env=dev

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         }
                     }
                 };
-                httpRequest.open('GET', 'https://cdn.staticaly.com/gh/gareins/sp3/audio/podcasts.json');
+                httpRequest.open('GET', 'https://cdn.staticaly.com/gh/gareins/sp3/audio/podcasts.json?env=dev');
                 httpRequest.send(); 
             }
             function registerCallbacks() {
